<resources>
    <string name="app_name">SupervApp</string>
    <string name="crear">Crear</string>
    <string name="anadir">Añadir</string>
    <string name="cancelar">Cancelar</string>
    <string name="ingresedatosdelproyecto">Ingrese los datos del proyecto</string>
    <string name="ingresedatosdelaestructura">Ingrese los datos de la estructura</string>
    <string name="ingresedatosdelelemento">Ingrese el nombre del elemento</string>
    <string name="nombreproyecto">Nombre del proyecto</string>
    <string name="nombreconstructora">Nombre de la constructora</string>
    <string name="nombreelemento">Nombre del elemento</string>
    <string name="tipoElemento">Seleccione el tipo de elemento</string>
    <string name="seleccionelasopcionesquecumple">Seleccione las características que cumple</string>
    <string name="ingresetodoslosdatos">Ingrese todos los datos por favor.</string>
    <string name="nombreestructura">Nombre de la estructura</string>
    <string name="elemento_pilas">Pilas</string>
    <string name="elemento_zapatas">Zapatas</string>
    <string name="elemento_micropilotes">Micropilotes</string>
    <string name="elemento_vigas_de_fundacion">Vigas de Fundación</string>
    <string name="elemento_losas_de_fundacion">Losas de Fundación</string>
    <string name="elemento_muros_de_contencion">Muros de Contención</string>
    <string name="elemento_muros_estructurales">Muros Estructurales</string>
    <string name="elemento_columnas">Columnas</string>
    <string name="elemento_losas">Losas</string>
    <string name="elemento_mamposteria_no_estructural">Mampostería No Estructural</string>
    <string name="elemento_mamposteria_estructural">Mampostería Estructural</string>
    <string name="ok">Ok</string>
    <string-array name="string_array_elementos">
        <item>Pilas</item>
        <item>Zapatas</item>
        <item>Micropilotes</item>
        <item>Vigas de Fundación</item>
        <item>Losas de Fundación</item>
        <item>Muros de Contención</item>
        <item>Muros Estructurales</item>
        <item>Columnas</item>
        <item>Losas</item>
        <item>Mampostería No Estructural</item>
        <item>Mampostería Estructural</item>
    </string-array>
    <string-array name="string_array_pilacheck">
        <item>Diámetro</item>
        <item>Profundidad</item>
        <item>Altura de la campana</item>
        <item>Altura de la pila</item>
        <item>Material</item>
        <item>Acero de refuerzo</item>
    </string-array>
</resources>