<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <CheckBox android:id="@+id/checkbox_pilas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elemento_pilas"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_zapatas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elemento_zapatas"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_micropilotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elemento_micropilotes"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_vigasdefundacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elemento_vigas_de_fundacion"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_losasdefundacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elemento_losas_de_fundacion"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_murosdecontencion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elemento_muros_de_contencion"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_murosestructurales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elemento_muros_estructurales"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_columnas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elemento_columnas"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_losas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elemento_losas"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_mamposterianoestructural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elemento_mamposteria_no_estructural"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_mamposteriaestructural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elemento_mamposteria_estructural"
        android:onClick="onCheckboxClicked"/>



    <Button
        android:id="@+id/button_add_elementos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anadir" />

    <Button
        android:id="@+id/button_cancelar_elementos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar" />
</LinearLayout>